--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -1,12 +1,44 @@
 .list-container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
     padding: 1rem;
     margin-top: 1rem;
 }
 
 .list-container h1 {
+    align-self: center;
     font-size: 2rem;
     font-weight: 700;
     color: #333333;
+}
+
+.item-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10rem;
+    padding: 1rem;
+    margin-top: 1rem;
+    border-top: 1px solid #e0e0e0;
+    border-bottom: 1px solid #e0e0e0;
+}
+
+.item-list-title {
+    padding-top: 1rem;
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: #333333;
+}
+
+.item-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    border: 1px solid #e0e0e0;
+    border-radius: 5px;
+    background-color: #f9f9f9;
 }
