--- a/src/App.css
+++ b/src/App.css
@@ -24,3 +24,15 @@ select {
     border: none;
     outline: none;
 }
+
+.btn {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #000;
+    color: #fff;
+    font-size: 16px;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
