--- a/src/components/ItemDetailContainer/ItemDetailContainer.css
+++ b/src/components/ItemDetailContainer/ItemDetailContainer.css
@@ -1,4 +1,4 @@
-.list-container {
+.detail-container {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
@@ -7,9 +7,9 @@
     margin-top: 20px;
 }
 
-.card-item {
-    width: 30%;
-    height: 350px;
+.card-item-detail {
+    width: 500px;
+    height: 500px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -21,27 +21,25 @@
     box-shadow: 5px 5px 5px #000;
 }
 
-.item-img {
+.item-detail-img {
     width: 100%;
-    height: 200px;
+    height: 250px;
 }
 
-.item-info {
-    width: 100%;
+.item-description {
+    font-size: 15px;
+    text-align: center;
+}
+
+.item-count {
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 10px;
+    flex-direction: column;
+    margin-top: 5px;
+    gap: 5px;
 }
 
-.item-title {
-    font-size: 16px;
-    text-align: center;
-    font-weight: bold;
-}
-
-.item-price {
-    font-size: 16px;
-    font-weight: bold;
+.item-count span {
+    margin: 0 5px;
 }
