--- a/src/components/ItemDetailContainer/ItemDetailContainer.css
+++ b/src/components/ItemDetailContainer/ItemDetailContainer.css
@@ -4,42 +4,51 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    margin-top: 20px;
+    margin: 24px 0;
+    cursor: default;
+    font-family: "Nunito", sans-serif;
 }
 
 .card-item-detail {
-    width: 500px;
-    height: 500px;
+    width: 30%;
+    height: auto;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    margin: 10px;
-    padding: 10px;
-    border: 1px solid #000;
-    border-radius: 10px;
-    box-shadow: 5px 5px 5px #000;
+    border: 1px solid #CCCCCC;
+    border-radius: 16px;
+    box-shadow: 8px 8px 8px #CCCCCC;
 }
 
-.item-detail-img {
+.card-item-img {
     width: 100%;
     height: 250px;
 }
 
-.item-description {
-    font-size: 15px;
+.item-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0 64px;
+    gap: 8px;
+}
+
+.item-info-title {
+    font-size: 16px;
+    font-weight: 400;
     text-align: center;
 }
 
-.item-count {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    margin-top: 5px;
-    gap: 5px;
+.item-info-description {
+    font-size: 14px;
+    font-weight: 300;
+    text-align: center;
+    font-style: italic;
 }
 
-.item-count span {
-    margin: 0 5px;
+.item-info-price {
+    color: #000000;
+    font-weight: bold;
 }
