--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -4,44 +4,55 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    margin-top: 20px;
+    margin: 24px 0;
+    gap: 24px;
+    cursor: default;
+    font-family: "Nunito", sans-serif;
 }
 
 .card-item {
     width: 30%;
-    height: 350px;
+    height: 400px;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    margin: 10px;
-    padding: 10px;
-    border: 1px solid #000;
-    border-radius: 10px;
-    box-shadow: 5px 5px 5px #000;
+    border: 1px solid #CCCCCC;
+    border-radius: 16px;
+    box-shadow: 8px 8px 8px #CCCCCC;
 }
 
-.item-img {
+.card-item-img {
     width: 100%;
-    height: 200px;
+    height: 250px;
 }
 
 .item-info {
-    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 10px;
+    padding: 0 64px;
+    gap: 8px;
 }
 
-.item-title {
+.item-info-title {
     font-size: 16px;
+    font-weight: 400;
     text-align: center;
+}
+
+.item-info-price {
+    color: #000000;
     font-weight: bold;
 }
 
-.item-price {
-    font-size: 16px;
-    font-weight: bold;
+.item-info-icon {
+    font-size: 24px;
+    color: #333333;
+    transition: all 0.2s ease-in-out;
+}
+
+.item-info-icon:hover {
+    transform: scale(1.1);
 }
