--- a/src/components/CartView/CartView.css
+++ b/src/components/CartView/CartView.css
@@ -13,7 +13,9 @@
 }
 
 .cart-empty p {
-    margin-bottom: 16px;
+    margin-bottom: 24px;
+    color: #333333;
+    font-style: italic;
 }
 
 .cart-content {
