--- a/src/components/Checkout/Checkout.css
+++ b/src/components/Checkout/Checkout.css
@@ -9,10 +9,11 @@
 }
 
 .checkout-empty-message {
-  font-size: 18px;
-  color: #f44336;
+  font-size: 16px;
+  font-style: italic;
+  color: #333333;
   text-align: center;
-  margin-bottom: 16px;
+  margin-bottom: 24px;
 }
 
 .checkout-success {
