--- a/src/components/Maintenance/Maintenance.css
+++ b/src/components/Maintenance/Maintenance.css
@@ -12,17 +12,20 @@
 }
 
 .maintenance-image {
-    font-size: 32px;
+    font-size: 28px;
     height: auto;
-    margin-bottom: 20px;
+    margin-bottom: 16px;
 }
 
 .maintenance-title {
-    font-size: 24px;
-    margin-bottom: 10px;
+    font-size: 22px;
+    margin-bottom: 16px;
+    font-family: "Lora", sans-serif;
 }
 
 .maintenance-message {
-    font-size: 18px;
+    font-size: 16px;
     font-style: italic;
+    color: #333333;
+    margin-bottom: 24px;
 }
